--- a/css/index.css
+++ b/css/index.css
@@ -143,11 +143,8 @@ button.submit:hover{
 }
 
 .top-ad-banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 728px;
+    text-align: left;
+    width: 100%;
     height: 90px;
     margin-left: 3vw;
     margin-top: 1vh;
